better handling of cycles and palindromes